kubernetes/ui.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  namespace: clouditor
  labels:
    app: ui
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
        - image: ghcr.io/clouditor/ui:latest
          imagePullPolicy: Always
          name: ui
          ports:
            - containerPort: 5173
---
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: clouditor
  labels:
    app: ui
spec:
  ports:
    - port: 5173
      protocol: TCP
      targetPort: 5173
      name: http
  selector:
    app: ui
