kubernetes/auth.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: clouditor
  labels:
    app: auth
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: ghcr.io/oxisto/oauth2go:latest
          imagePullPolicy: Always
          args:
            [
              "-public-url=https://auth.clouditor.io",
              "-redirect-uri=https://demo.clouditor.io/callback",
            ]
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: clouditor
  labels:
    app: auth
spec:
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: auth
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth.clouditor.io
  namespace: clouditor
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - auth.clouditor.io
      secretName: tls-secret
  rules:
    - host: auth.clouditor.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth
                port:
                  number: 8000
