kubernetes/engine.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: engine
  namespace: clouditor
  labels:
    app: engine
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: engine
  template:
    metadata:
      labels:
        app: engine
    spec:
      containers:
        - name: engine
          image: ghcr.io/clouditor/engine:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
            - containerPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: engine
  namespace: clouditor
  labels:
    app: engine
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
      name: rest
  selector:
    app: engine
---
apiVersion: v1
kind: Service
metadata:
  name: engine-grpc
  namespace: clouditor
  labels:
    app: engine
spec:
  ports:
    - port: 9090
      targetPort: 9090
      name: grpc
  selector:
    app: engine
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo.clouditor.io
  namespace: clouditor
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - demo.clouditor.io
      secretName: tls-secret
  rules:
    - host: demo.clouditor.io
      http:
        paths:
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: engine
                port:
                  name: rest
          - path: /clouditor.orchestrator.v1.Orchestrator
            pathType: Prefix
            backend:
              service:
                name: engine-grpc
                port:
                  name: grpc
          - path: /clouditor.evidence.v1.EvidenceStore
            pathType: Prefix
            backend:
              service:
                name: engine-grpc
                port:
                  name: grpc
          - path: /grpc.reflection.v1.ServerReflection
            pathType: Prefix
            backend:
              service:
                name: engine-grpc
                port:
                  name: grpc
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui
                port:
                  name: http
